# oneworldtrade

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/oneworldtrade/: __init__.py  __main__.py  config.py  exceptions.py  log.py  logging.py
src/oneworldtrade/bridgewood/: __init__.py  client.py  models.py
src/oneworldtrade/broker/: __init__.py  alpaca.py  base.py  models.py
src/oneworldtrade/cli/: main.py
src/oneworldtrade/execution/: __init__.py  idempotency.py  lifecycle.py  reconciliation.py  trader.py
src/oneworldtrade/types/: fills.py  orders.py  reporting.py  results.py
tests/: test_bridgewood_client.py  test_config.py  test_orders.py  test_trader.py
