[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oneworldtrade"
version = "0.1.2"
description = "Agent-side trading SDK for Alpaca execution and Bridgewood reporting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
authors = [
  { name = "Benjamin Chang", email = "benjamin621@gmail.com" }
]
maintainers = [
  { name = "Benjamin Chang", email = "benjamin621@gmail.com" }
]
keywords = [
  "alpaca",
  "bridgewood",
  "trading",
  "agents",
  "sdk"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0"
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0"
]

[project.scripts]
oneworldtrade = "oneworldtrade.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oneworldtrade = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
packages = ["oneworldtrade"]
